// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API calls should populate the image container when search results arrive 1`] = `
<form
  className="SearchForm"
  onSubmit={[Function]}
>
  <p>
    Enter a search term:
  </p>
  <input
    name="query"
    onChange={[Function]}
    type="text"
    value="hello"
  />
  <div
    className="ButtonBar"
  >
    <button
      disabled={false}
      type="submit"
    >
      Search Giphy!
    </button>
  </div>
  <div
    className="SearchResults"
  >
    <div
      className="GiphyImage"
    >
      <img
        alt="tumblr.com"
        src="http://media2.giphy.com/media/FiGiRei2ICzzG/200w.gif"
      />
    </div>
  </div>
</form>
`;

exports[`failed API calls should display an alert when the API call fails 1`] = `
<form
  className="SearchForm"
  onSubmit={[Function]}
>
  <p>
    Enter a search term:
  </p>
  <input
    name="query"
    onChange={[Function]}
    type="text"
    value="hello"
  />
  <div
    className="ButtonBar"
  >
    <button
      disabled={false}
      type="submit"
    >
      Search Giphy!
    </button>
  </div>
  <div
    className="error"
  >
    Sorry, but something went wrong.
  </div>
  <div
    className="SearchResults"
  />
</form>
`;

exports[`search button should be disabled when the search field is blank 1`] = `
<form
  className="SearchForm"
  onSubmit={[Function]}
>
  <p>
    Enter a search term:
  </p>
  <input
    name="query"
    onChange={[Function]}
    type="text"
    value=""
  />
  <div
    className="ButtonBar"
  >
    <button
      disabled={true}
      type="submit"
    >
      Search Giphy!
    </button>
  </div>
  <div
    className="SearchResults"
  />
</form>
`;

exports[`search button should be enabled when the search field is not blank 1`] = `
<form
  className="SearchForm"
  onSubmit={[Function]}
>
  <p>
    Enter a search term:
  </p>
  <input
    name="query"
    onChange={[Function]}
    type="text"
    value="i can haz unit tests"
  />
  <div
    className="ButtonBar"
  >
    <button
      disabled={false}
      type="submit"
    >
      Search Giphy!
    </button>
  </div>
  <div
    className="SearchResults"
  />
</form>
`;

exports[`should start with a disabled search button 1`] = `
<form
  className="SearchForm"
  onSubmit={[Function]}
>
  <p>
    Enter a search term:
  </p>
  <input
    name="query"
    onChange={[Function]}
    type="text"
    value=""
  />
  <div
    className="ButtonBar"
  >
    <button
      disabled={true}
      type="submit"
    >
      Search Giphy!
    </button>
  </div>
  <div
    className="SearchResults"
  />
</form>
`;

exports[`should start with an empty search field 1`] = `
<form
  className="SearchForm"
  onSubmit={[Function]}
>
  <p>
    Enter a search term:
  </p>
  <input
    name="query"
    onChange={[Function]}
    type="text"
    value=""
  />
  <div
    className="ButtonBar"
  >
    <button
      disabled={true}
      type="submit"
    >
      Search Giphy!
    </button>
  </div>
  <div
    className="SearchResults"
  />
</form>
`;
